--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.3.1",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -22,18 +23,23 @@
     "eslint-config-next": "13.4.19",
     "gsap": "^3.12.2",
     "next": "13.4.19",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-toastify": "^9.1.3",
     "swiper": "^10.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
-    "use-click-outside": "^2.0.0"
+    "use-click-outside": "^2.0.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.197",
+    "@types/nodemailer": "^6.4.9",
     "lodash": "^4.17.21",
-    "prettier": "^3.0.2",
+    "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.3"
   }
 }
